# AmiaBot

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  build_plugin.ps1  build_plugin.py  cache_info.json  compile-ts.bat  compile-ts.ps1  config.json  go.mod  index.css  main.py  monaco.css  napcat.html  package-lock.json  package.json  plugin_manager.py  pyproject.toml  requirements.txt  run.bat  run.ps1  sync_code.py  test copy.py  tsconfig.json
amia/: __init__.py  group.py  recv_message.py  send_message.py  user.py
cache_manager/: __init__.py
cmd/nyanyabot-plugin-amiabot-bilibili/: main.go
cmd/nyanyabot-plugin-amiabot-pixiv/: main.go  main_test.go  utils.go
cmd/nyanyabot-plugin-amiabot-pjsk-account/: exports.go  main.go  utils.go
cmd/nyanyabot-plugin-amiabot-pjsk-b30/: main.go
cmd/nyanyabot-plugin-amiabot-pjsk-bind/: main.go
cmd/nyanyabot-plugin-amiabot-pjsk-card/: main.go  utils.go
cmd/nyanyabot-plugin-amiabot-pjsk-event/: main.go  utils.go
cmd/nyanyabot-plugin-amiabot-pjsk-profile/: main.go
cmd/nyanyabot-plugin-amiabot-pjsk-song/: alias_loader.go  main.go  matcher.go  matcher_test.go  types.go
cmd/nyanyabot-plugin-amiabot-query/: main.go  main_test.go
cmd/nyanyabot-plugin-amiabot-zeabur-status/: main.go
config/: __init__.py
example_plugin/: __init__.py  info.json
openai/: __init__.py
plugin_manager/: __init__.py
to_image/: __init__.py  html.py  markdown.py  template.html
utils/: command.py  detect.py  get_image_size.py  match.py  resolve_url.py  tries.py
utools/: command.py  format_int.py  sync.py  system.py
webui/: app.py
(+33 files in other folders)
