[project]
name = "AmiaBot"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Flask>=2.0.0",
    "Werkzeug>=2.0.0",
    "Jinja2>=3.0.0",
    "MarkupSafe>=2.0.0",
    "itsdangerous>=2.0.0",
    "click>=8.0.0",
    "six>=1.16.0",
    "aiohttp>=3.13.2",
    "psutil>=7.1.2",
    "pyppeteer>=2.0.0",
    "pillow>=12.0.0",
    "rich>=14.2.0",
    "cryptography>=46.0.3",
    "mutagen>=1.47.0",
]
